# QsLib

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QsLib.natvis  README.md  cpplint.cfg
builds/cmake/: CMakeLists.txt
builds/experimental/: qn_mlu.c  qs_ctn_inline.h
builds/linux/: QsLinux.sln  QsLinux.vcxproj  QsLinux.vcxproj.filters
builds/make/: bsd.mk.txt  mk.bsd
builds/msvc/: LibQs.sln  LibQs.vcxproj  QsLib.sln  QsLib.vcxproj  QsLib.vcxproj.filters  QsLibEm.html  QsLibEm.sln  QsLibEm.vcxproj  QsLibEm.vcxproj.filters  QsLinux.sln  QsLinux.vcxproj  QsLinux.vcxproj.filters  cpp.hint  res.hfs  zconsole.vcxproj  zconsole.vcxproj.filters
builds/res/: res.hfs
builds/res/doc/: webgl.md
builds/res/font/: johabnzg16.hxn  johabnzg16l.hxn  kopubs_l.hxn  noto_jk_l.hxn
builds/res/image/: ff14_autumn.dds  ff14_autumn.qoi
builds/res/shader/: simple_ps.glsl  simple_vs.glsl
builds/unix/: Makefile  qs.mk
builds/windows/: QsLib.sln
builds/workarea/: qges2_rdh.c  qggl_base.c  qggl_code.h  qggl_supp.h
inc/: qg.h  qkmc.h  qmkc.h  qn.h  qnctn.h  qnmath.h  qs.h  qs_ctn.h  qs_kmc.h  qs_math.h  qs_qg.h  qs_qn.h
lib/: place libraries here.txt
qg/: pch.c  pch.h  qg.c  qg.vcxproj  qg.vcxproj.filters  qg_es2.h  qg_es2func.h  qg_internal.h  qg_kmc.c  qg_kmc.h  qg_rdh.c  qg_rdh_es2.c  qg_rdo.c  qg_stub.c  qg_stub.h  qg_stub_sdl.c  qges2_rdh.c  qges2_rdo.c  qgsdl_stub.c  qkmc.c  qmkc.c
qg/SDL/: SDL_render.h  SDL_syswm.h
qn/: PatrickPowell_snprintf.c  PatrickPowell_snprintf.h  cpp.hint  pch.h  qn.c  qn.cpp  qn.sln  qn.vcxproj  qn.vcxproj.filters  qn_datetime.c  qn_debug.c  qn_file.c  qn_gam.c  qn_hash.c  qn_hash_prime.c  qn_math.c  qn_mem.c  qn_mem.h  qn_mlu.c  qn_sort.c  qn_str.c
qn/sse2neon/: emmintrin.h
qn/zlib/: compress.c  infback.c  inftrees.c  zstub.h
src/: CMakeLists.txt  cpp.hint  libqs.vcxproj  libqs.vcxproj.filters  pch.c  pch.h  qs.natvis  qs.vcxproj  qs.vcxproj.filters  qs_conf.h  qs_intellisense.h  qs_proxy.h  qs_supp.h  z.txt
src/qg/: qg_depict.c  qg_dpct.c  qg_dpct.h  qg_es2.h  qg_es2func.h  qg_font.c  qg_glbase.h  qg_glfunc.h  qg_glfunc_list.h  qg_glsupp.h  qg_image.c  qg_kmc.c  qg_mesh.c  qg_node.h  qg_primtype.h  qg_rdh.c  qg_rdo.c  qg_stub.c  qg_stub.h  qg_stub_windows.c  qges2_rdh.c  qges2_rdo.c  qges2_shd.c  qggl_base.c  qggl_base.h  qggl_func.c  qggl_rdo.c  qggl_shd.c  qggl_supp.h  qgsdl_stub.c  qgwin_func.h  qgwin_mesg.c  qgwin_stub.c  qgwin_stub.h  qgwlx_func.h  qgwlx_stub.c  qgwlx_stub.h  qgx11_func.h  qgx11_opengl.c  qgx11_stub.c  (+1 more)
src/qg/gl/: egl.h  gl.h  glad_supp.h  gles2.h  qges_rdh.c  qges_rdh.h  qggl_base.h  qggl_code.h  wgl.h
src/qg/glad/: glad.c  glad.h  glad_proxy.h
src/qg/stub/: glad_egl.c  glad_gl.c  qg_stub.c  qg_stub.h  qgrdh_es.c  qgrdh_es.h  qgrdh_gl4.c  qgrdh_gl4.h  qgrdh_glbase.h  qgrdh_qgl.c  qgrdh_qgl.h  qgrdh_qgl_api.c  qgrdh_qgl_glad.c  qgrdh_qglfunc.c  qgsdl_stub.c  qgstub_emscripten.c  qgstub_sdl.c  qgstub_wayland.c  qgstub_win.c  qgstub_win_func.h  qgstub_windows.c  qgstub_wlx.c  qgwin_stub.c  qgwin_stub.h  qgwin_stub_func.h  qgwl_stub.c  qgwl_stub.h  qgwl_stub_func.h  qgwl_stub_so.h  qgwlx_func.h  qgwlx_stub.c  qgwlx_stub.h  wayland-wayland.h
src/qg/stub/gl/: glad_supp.h
src/qg/stub/glad/: egl.h  gl.h  gles2.h  wgl.h
src/qg/stub/wayland/: wayland-xdg-shell.h
src/qn/: PatrickPowell_snprintf.c  PatrickPowell_snprintf.h  qm_math.c  qn.c  qn_debug.c  qn_file.c  qn_gam.c  qn_hash.c  qn_math.c  qn_mem.c  qn_mem.h  qn_mlu.c  qn_prf.c  qn_sort.c  qn_str.c  qn_thd.c  qn_time.c  qs_gam.c
src/qn/sdefl/: sdefl.c  sdefl.h  sinfl.c  sinfl.h
src/qn/zlib/: adler32.c  compress.c  crc32.c  deflate.c  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zlib_proxy.h  zstub.h  zutil.c
src/supp/glad/: egl.h  wgl.h
src/supp/par/: par_shapes.h
src/supp/vurtun/: sinfl.h
zconsole/: CMakeLists.txt  test_box_tri.c  test_buffer.c  test_buffer_multi.c  test_diskfs.c  test_font.c  test_hash.c  test_hfs.c  test_main_loop.c  test_mesh_obital_fps.c  test_mount_diskfs.c  test_mount_fuse.c  test_mount_hfs.c  test_multi_buffer.c  test_printf.c  test_random.c  test_rdh.c  test_sprite.c  test_stub.c  zconsole.vcxproj  zconsole.vcxproj.filters  zz.c
zconsole/sample/: test_multi_buffer_layout.c  test_printf.c  test_rdh.c  test_stub.c
